--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,11 @@ julia:
   - 0.4
 notifications:
   email: false
+addons:
+  apt:
+    packages:
+      - cmake
+      - libxxf86vm-dev
+    sources:
+      - kubuntu-backports
 # uncomment the following lines to override the default test script
