--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 language: julia
 os:
   - linux
-  - osx
+dist: trusty
 julia:
-  - 0.4
+  - 0.6
+  - nightly
 notifications:
   email: false
 addons:
   apt:
     packages:
-      - cmake
-      - libxxf86vm-dev
-    sources:
-      - kubuntu-backports
-# uncomment the following lines to override the default test script
+    - xorg-dev
+before_script:
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; fi
