--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: julia
-os:
-  - linux
-dist: trusty
 julia:
   - 0.6
   - nightly
 notifications:
   email: false
+os:
+  - linux
+  - osx
+dist: trusty
+sudo: false
 addons:
   apt:
     packages:
